# at-python-template

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter-server.yml  cookiecutter.json  environment.yml  pyproject.toml  renovate.json  requirements.txt  template-setup.yml
.github/workflows/: tests-conda.yml  tests-pip.yml  tests-poetry.yml  tests.yml  traffic.yml  workflow.yml
cd/: build.yml
ci/: test-pipeline.yml
docs/: terminalizer_template_setup.cast  terminalizer_template_setup.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_options.py  test_validation.py  util.py  version_check.py
traffic/: clones.csv  views.csv
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile__conda  Dockerfile__pip  Dockerfile__poetry  Dockerfile__uv  README.md  conda.dockerfile  docker-compose.yml  environment-dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements__hocon.txt  setup.py  setup__basic.py  uv.toml
{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml
{{cookiecutter.project_slug}}/.idea__editor/: modules.xml
{{cookiecutter.project_slug}}/.vscode__editor/: settings.json
{{cookiecutter.project_slug}}/cd/: build-dev.yml  build.yml  delete-old-images.yml  trigger.yml
{{cookiecutter.project_slug}}/ci/: test-pipeline.yml
{{cookiecutter.project_slug}}/config/: config.yml  debug.conf  dev.conf  prod.conf
{{cookiecutter.project_slug}}/notebooks/: example.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  cli.py  main.py  main__cli.py  util__hocon.py  util__yaml.py  version.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/res/: default.conf
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/tests/: pytest.ini  test_example.py  test_util.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  cli.py
