[tool.poetry]
name = "at-python-template"
version = "0.1.0"
description = "This is the official Python Project Template of Alexander Thamm GmbH (AT).It is built with cookiecutter and inspired by cookiecutter-data-science. It is designed to bridge the gap between exploratory work and production-ready projects. The goal is to be able to quickly bootstrap a Python project that provides lots of useful stuff to build, test & deploy your code without being overly convoluted like many of the publicly available packages."
authors = [
    "Sebastian Straub (sebastian.straub [at] alexanderthamm.com)",
    "Steffen Bunzel (steffen.bunzel [at] alexanderthamm.com)",
    "Hans Rauer (hans.rauer [at] alexanderthamm.com)",
    "Simon Weiß (simon.weiss [at] alexanderthamm.com)",
    "Honza Bílek (jan.bilek [at] alexanderthamm.com)",
    "Christian Baur (chrisitan.baur [at] alexanderthamm.com)"
]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^2.3.0"
pre-commit = "2.2"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pyhocon = "^0.3.60"
pyyaml = "^6.0.1"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
