[tool.poetry]
name = "at-python-template"
version = "1.0.0"
description = "This is the official Python Project Template of Alexander Thamm GmbH (AT)"
authors = [
    "Sebastian Straub (sebastian.straub [at] alexanderthamm.com)",
    "Steffen Bunzel (steffen.bunzel [at] alexanderthamm.com)",
    "Hans Rauer (hans.rauer [at] alexanderthamm.com)",
    "Simon Weiß (simon.weiss [at] alexanderthamm.com)",
    "Honza Bílek (jan.bilek [at] alexanderthamm.com)",
    "Christian Baur (chrisitan.baur [at] alexanderthamm.com)"
]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.3"
pre-commit = "3.5"
pytest = "^7.4"
pytest-mock = "^3.12"
pyhocon = "^0.3.60"
pyyaml = "^6.0"
typer = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
