[tool.poetry]
name = "at-python-template"
version = "1.1.0"
description = "This is the official Python Project Template of Alexander Thamm GmbH (AT)"
authors = [
    "Christian Baur <christian.baur@alexanderthamm.com>",
    "Honza Bílek <jan.bilek@alexanderthamm.com>",
#    "Sebastian Straub <sebastian.straub@alexanderthamm.com>",
#    "Steffen Bunzel <steffen.bunzel@alexanderthamm.com>",
#    "Hans Rauer <hans.rauer@alexanderthamm.com>",
#    "Simon Weiß <simon.weiss@alexanderthamm.com>",
#    "Honza Bílek <jan.bilek@alexanderthamm.com>",
]
license = "Apache License, Version 2.0"
readme = "README.md"
packages = [{ include = "{{cookiecutter.module_name}}", from = "{{cookiecutter.project_slug}}/src" }]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.3"
pre-commit = "^4.1.0"
pytest-mock = "^3.12"
pyhocon = "^0.3.60"
pyyaml = "^6.0"
typer = "^0.15.0"
setuptools = "^76.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
